# rearwing-glviewer

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
app/: CMakeLists.txt  main.cpp
app/assets/repo/: CMakeLists.txt  RoundedRectangleButton.xcf  digits.xcf  gradient.xcf
app/assets/repo/models/: sphere.mtl
app/assets/shaders/: Basic.vert  BasicNoNormals.vert  BasicNoNormalsDepth.vert  Color.frag  NonTextured.frag  Text.frag  Text.vert  TextFadeOut.frag  TextureColored.frag  TextureColoredFadeOut.frag  Textured.frag
app/cmake/: scenegraph.cmake  scripts.cmake
app/components/: CMakeLists.txt
app/components/backend/: RenderItem.hpp  RenderTag.hpp  Renderer.hpp  Uniform.hpp
app/components/backend/gl/context/: Context.cpp
app/components/backend/gl/es30/: CMakeLists.txt
app/components/backend/gl/es30/glad/include/: ConfigGL.hpp
app/components/backend/gl/es30/glad/include/glad/: glad.h
app/components/backend/gl/es30/glad/src/: glad.c
app/components/backend/gl/factories/: BufferObjectFactory.cpp  BufferObjectFactory.hpp  CMakeLists.txt  FontFactory.cpp  FontFactory.hpp  ProgramObjectFactory.cpp  ProgramObjectFactory.hpp  RenderItemFactory.cpp  RenderItemFactory.hpp
app/components/backend/gl/loaders/: CMakeLists.txt
app/components/backend/gl/loaders/loader_models_obj/: CMakeLists.txt  loader_models_obj.cc
app/components/backend/gl/loaders/loader_textures_etc/: CMakeLists.txt  ETCTextureLoader.cpp  ETCTextureLoader.hpp
app/components/backend/gl/loaders/loader_textures_etc/etc2comp/: CMakeLists.txt
app/components/backend/gl/loaders/loader_textures_etc/etc2comp/Etc/: EtcImage.h
app/components/backend/gl/loaders/loader_textures_raw/: CMakeLists.txt  TextureLoader.cpp  TextureLoader.hpp  stb_image.cpp  stb_image.h
app/components/backend/gl/loaders/loader_textures_s3tc/: CMakeLists.txt  nv_dds.h
app/components/backend/gl/renderer/: CMakeLists.txt  GPUResources.cpp  GPUResources.hpp  RenderItem.cpp  Uniform.cpp
app/components/backend/gl/sc20/: CMakeLists.txt
app/components/backend/gl/sc20/glad/include/: ConfigGL.hpp
app/components/backend/gl/sc20/glad/include/glad/: glad.h
app/components/backend/gl/sc20/glad/src/: glad.c
app/components/backend/vulkan/: CMakeLists.txt  empty.cpp
app/components/backend/vulkan/context/: Context.cpp
app/components/backend/vulkan/renderer/: CMakeLists.txt  Log.hpp  Platform.hpp  Vulkan.hpp  VulkanUtils.hpp
app/components/backend/vulkan/renderer/core/: BufferData.hpp  DescriptorSet.hpp  Pipeline.hpp  PipelineLayout.hpp  RenderPass.hpp  Shader.hpp  StagingBuffer.hpp  Texture.hpp  UniformBuffer.hpp  VertexBuffer.hpp
app/components/backend/vulkan/renderer/framework/: AppMultiThread.hpp  AppSingleThread.hpp  Framework.hpp
app/components/backend/vulkan/renderer/src/: Log.cpp  Platform.cpp  RenderItem.cpp  VulkanUtils.cpp
app/components/backend/vulkan/renderer/src/core/: Pipeline.cpp  PipelineLayout.cpp  RenderPass.cpp  Shader.cpp  UniformBuffer.cpp  VertexBuffer.cpp
app/components/backend/vulkan/renderer/src/framework/: AppMultiThread.cpp  AppSingleThread.cpp  Framework.cpp  cube_textured.hpp
app/components/backend/vulkan/renderer/src/window/: WindowWin32.cpp  WindowXCB.cpp
app/components/backend/vulkan/renderer/window/: Window.hpp  WindowWin32Traits.hpp  WindowXCBTraits.hpp
app/components/backend/vulkan/vulkan/include/: ConfigGL.hpp
app/components/scenegraph/: CMakeLists.txt  Camera.cpp  Moveable.cpp  Scene.cpp
app/components/scenegraph/inc/: Camera.hpp  Moveable.hpp  Scene.hpp  Text.hpp
app/components/scenegraph/inc/nodes/: Icon.hpp  Node3D.hpp  Plane3D.hpp  TextNode.hpp
app/components/scenegraph/inc/widgets/: TextWidget.hpp
app/components/scenegraph/nodes/: Icon.cpp  Node3D.cpp  Plane3D.cpp  TextNode.cpp
app/components/scenegraph/widgets/: TextWidget.cpp
app/inc/: Application.hpp  Context.hpp  ContextConfig.hpp  GLContext.hpp  GLPreview.hpp
app/inc/rendering/: RenderPassDefault.hpp  RenderPassStart.hpp  RenderPassText.hpp
app/src/: Application.cpp  Context.cpp  GLPreview.cpp
app/src/rendering/: RenderPassDefault.cpp  RenderPassStart.cpp  RenderPassText.cpp
cmake/: backend.cmake  compiler.cmake  config.h.in  logging.cmake  options.cmake  utils.cmake
cmake/compilers/: common.cmake  gcc.cmake
components/: CMakeLists.txt
components/config/: Config.hpp  ConfigConstraints.hpp
components/utils/: CMakeLists.txt  File.cpp  Strings.cpp
components/utils/inc/: Exception.hpp  File.hpp  Logger.hpp  Math.hpp  Strings.hpp  cxxopts.hpp
doc/: classes.puml
tests/: CMakeLists.txt
tests/frameworks/trompeloeil/: trompeloeil.hpp
tests/ut/: CMakeLists.txt  main.cpp  tMoveable.cpp  tNode3D.cpp  tRendererGL.cpp  tTextureLoader.cpp
tests/ut/stubs/: sGPUResources.cpp  sOpenGL.cpp
tools/: CMakeLists.txt  Paths.hpp
tools/font_generator/: CMakeLists.txt  font_generator.cpp  font_generator.hpp  main.cpp
tools/font_generator/freetype2/src/pfr/: pfrgload.c
tools/program_generator/: CMakeLists.txt  Config.h  Config.h.in  ConfigGL.h  Exception.hpp  OffscreenContext.cpp  OffscreenContext.hpp  ProgramGenerator.cpp  ProgramGenerator.hpp  main.cpp  options.cmake
tools/program_generator/glad/gl41/include/glad/: glad.h
tools/program_generator/glad/gl41/src/: glad.c
tools/program_generator/glad/gles20/include/glad/: glad.h
tools/program_generator/glad/gles20/src/: glad.c
tools/program_generator/glad/gles30/src/: glad.c
